# hakmer-ng-redesign

./: .cproject  .gitmodules  .project  CMakeLists.txt  README.md
include/sdsl/: Makefile  cmake_install.cmake
src/: Block.hpp  TextIndex.hpp  aligned_block.cpp  aligned_block.hpp  block_extension.cpp  block_extension.hpp  block_extraction.cpp  block_extraction.hpp  block_helper_functions.cpp  block_helper_functions.hpp  block_writer.cpp  block_writer.hpp  build_superseeds.cpp  build_superseeds.hpp  distance_estimator.cpp  distance_estimator.hpp  dna_functions.hpp  extended_block.cpp  extended_block.hpp  hmm_classification.hpp  indexed_concat.cpp  indexed_concat.hpp  io.cpp  io.hpp  logger.hpp  mafft_raxml_wrapper.cpp  mafft_raxml_wrapper.hpp  main.cpp  options.hpp  presence_checker.cpp  presence_checker.hpp  quartet_indexer.hpp  quartet_topology.cpp  quartet_topology.hpp  quartet_topology_checker.cpp  quartet_topology_checker.hpp  seed.cpp  seed.hpp  seed_info.hpp  seeded_block.cpp  (+9 more)
src/DynamicEditDistance/src/: dist_config.hpp  dyn_prog.cpp  dyn_prog.hpp
src/alignment/: blosum62.hpp  msa_wrapper.hpp  nogaps_msa.cpp  nogaps_msa.hpp  pairwise_alignment.cpp  pairwise_alignment.hpp  simple_coords.hpp  simple_msa.cpp  simple_msa.hpp  split_pairwise_alignment.cpp  split_pairwise_alignment.hpp  star_msa.cpp  star_msa.hpp  twodim_matrix.hpp
src/indexing/: approx_matching.cpp  approx_matching.hpp  bsearchTaxonID.cpp  bsearchTaxonID.hpp  suffix_array_classic.cpp  suffix_array_classic.hpp  suffix_array_fm.hpp  suffix_array_wrapper.hpp
src/indexing/suffix_array_construction/: MergeSorter.hpp  RadixLSDCache.hpp  radix.hpp  utilsSA.hpp
src/scripts/: .Rhistory  ML_hap.0001.phy.raxml.bestTree  infer_tree_from_hakmer_counts_qmc.py  rf_dist.r  trees.0001
src/scripts/exp/: hakmer_ng_quartet_experiments.py  hakmer_ng_supermat_experiments.py
